Destination page - Fixed the alignment issues

--- a/css/index.css
+++ b/css/index.css
@@ -546,7 +546,7 @@ body {
 	padding-bottom: 4rem;
 }
 
-.grid-container * {
+.grid-container p:not([class]) {
 	max-width: 50ch;
 }
 
@@ -635,7 +635,7 @@ body {
 	}
 
 	.destination-meta {
-		--gap: 6rem;
+		--gap: min(5vw, 6rem);
 		justify-content: start;
 	}
 }
